--- a/app/src/main/res/layout/front_layout.xml
+++ b/app/src/main/res/layout/front_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="280dp"
+    android:layout_height="450dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -33,51 +33,58 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="7"
-                    android:textSize="15sp"
-                    android:text="new news jnjn"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="180dp"
                     android:padding="5dp"
                     android:src="@drawable/ic_launcher_background"/>
 
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:padding="10dp"
+                    android:ellipsize="end"
+                    android:maxLines="13"
+                    android:textSize="15sp"
+                    android:text="new news jnjn"/>
 
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/aurthor"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:text="author"
-                android:layout_marginLeft="10dp"
-                android:textStyle="italic"/>
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/publishedAt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="publisedat"
-                android:layout_marginTop="0dp"
-                android:textColor="@color/black"
-                android:layout_marginLeft="10dp"
-                android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/aurthor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:text="author"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="italic"/>
+
+                <TextView
+                    android:id="@+id/publishedAt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="publisedat"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="20dp"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+
 
 
         </LinearLayout>
