--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="News Only"
+            android:text="Inshort News"
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/purple"/>
