--- a/app/src/main/res/layout/front_layout.xml
+++ b/app/src/main/res/layout/front_layout.xml
@@ -1,96 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="450dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="5dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:padding="10dp"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="12dp"
+        app:cardElevation="6dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Headline -->
             <TextView
                 android:id="@+id/mainHeading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:text="Headline"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                android:textSize="23sp"
                 android:ellipsize="end"
-                android:maxLines="3"
-                android:padding="10dp"/>
+                android:maxLines="3" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:padding="0dp"
-                    android:src="@drawable/ic_launcher_background"/>
-
-                <TextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:padding="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="13"
-                    android:textSize="15sp"
-                    android:text="new news jnjn"/>
-
-
-            </LinearLayout>
-
+            <!-- Image + Description -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_launcher_background" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="Sample news description goes here"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/darker_gray"
+                    android:ellipsize="end"
+                    android:maxLines="7" />
+            </LinearLayout>
+
+            <!-- Author + Date -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="8dp">
+
                 <TextView
                     android:id="@+id/aurthor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:text="author"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="italic"/>
+                    android:text="Author"
+                    android:textStyle="italic"
+                    android:textSize="14sp"
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/publishedAt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="publisedat"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="20dp"
-                    android:textColor="@color/black"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold"/>
+                    android:text="Published at"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:textColor="@android:color/black"
+                    android:layout_marginTop="4dp" />
 
             </LinearLayout>
-
-
-
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
-
 
