--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Insort News"
+            android:text="Inshort News"
             android:textColor="@color/purple"
             android:textSize="25dp"
             android:textStyle="bold"/>
